--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "mongodb": "^6.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
